fix(accordion): ajustments in rules of overflow in accordion body

--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -73,9 +73,13 @@
   height: 0;
   overflow: hidden;
   border-bottom: 1px solid $color-surface-3;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: height 0.5s;
+  -moz-transition: height 0.5s;
+  transition: height 0.5s;
+
+  &_isOpen {
+    overflow: visible;
+  }
 
   & .container {
     padding: 8px 24px 48px;
